--- a/style.css
+++ b/style.css
@@ -1,24 +1,29 @@
 /* CSS: cascading style sheet  */
 
-body{
+* {
     /* margin is the space around an element */
+    margin: 0px;
     /* padding is the space within an element between the border and the content */
-    margin: 40px;
+    padding: 0px;
+    /*important to use multiple font families in case a web browser does not support one*/
+    font-family:sans-serif, "Press Start 2P";
+    color:white;
+}
+
+body{
+    margin-top: 40px;
     
     background: linear-gradient(black, skyblue);
     background-repeat: no-repeat;
     background-attachment: fixed;
-
-    color:white;
-
-    /*important to use multiple font families in case a web browser does not support one*/
-    font-family:sans-serif, "Press Start 2P";
 }
 
+/* period references HTML class="" */
 .top{
     text-align:center;
 }
 
+/* hashtag references HTML ID="" */
 #name{
     font-size: 42px;
 
@@ -29,6 +34,7 @@ body{
 
 #creds{
     font-size: 12px;
+    max-width: 500px;
 }
 
 .nav{
@@ -42,10 +48,36 @@ body{
 
     font-size: 20px;
 
-    padding-top: 20px;
+    height: 50px;
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:black;
 
     position: sticky;
     top: 0px;
+}
+
+.nav-button{
+    max-width: 200px; /* limit flex gorw */
+    min-width: 10px; /* limit flex shrink */
+
+    font-size: 20px;
+
+    background: none;
+    border: 5px solid white;
+}
+
+/* colon references pseudo classes */
+.nav-button:hover{
+    color:skyblue;
+
+    .fa-solid{
+        color: skyblue;
+    }
+    .nav-text{
+        color:skyblue;
+    }
 }
 
 .flex-container-column{
@@ -54,7 +86,7 @@ body{
     gap: 0px;
     column-gap: 0px;
     row-gap: 0px;
-    flex-wrap: nowrap; /* responsive line breaks */
+    flex-wrap: wrap; /* responsive line breaks */
     justify-content: center; /* main-axis alignment */
     align-items: center; /* cross-axis alignment */
     align-content: center;
@@ -70,38 +102,34 @@ body{
     justify-content: center;
     align-items: center;
     align-content: center;
-
 }
 
 /* dynamically change type of flex based on width of screen being used */
 @media(max-width: 575px){
-    .flex-container-row{
-        flex-direction: column;
+    .nav-text{
+        display: none;
+        position: none;
     }
 }
 
 .fa-solid{
-    flex-shrink: 0;
+    flex-shrink: 1;
     flex-grow: 0;
 }
 
 .flex-box{
-    max-width: 300px; /* limit flex gorw */
-    min-width: 100px; /* limit flex shrink */
     flex-grow: 1; /* allow getting bigger */
     flex-shrink: 1; /* allow getting smaller */
 
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
 }
 
-.nav:hover{
-    color: skyblue;
-}
-
-a:visited{
-    color: white;
+.flex-link{
+    text-decoration: none;
 }
 
 /*
@@ -117,7 +145,10 @@ p{
 }
 */
 
-/* reference to ID="" */
+.section{
+    height: 800px;
+}
+
 #p1{
     border: 5px solid;
     width:250px;
@@ -132,7 +163,28 @@ p{
     background: blueviolet;
 }
 
-/* reference to class="" */
-.even{
-    color:white;
+#to-top-button{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+
+    background: blue;
+    color: white;
+    opacity: 0.5;
+
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    box-shadow: 5px 2px 4px rgba(0, 0, 0, 0.3);
+
+    transition: all 0.2s linear;
+}
+
+#to-top-button:hover{
+    opacity: 1;
+}
+
+.hidden {
+    display: none;
 }
